@@ -79,9 +79,9 @@ namespace CBinding
 		// -1 means the cursor is outside the method parameter list
 		// 0 means no parameter entered
 		// > 0 is the index of the parameter (1-based)
-		public int GetCurrentParameterIndex (CodeCompletionContext ctx)
+		public int GetCurrentParameterIndex (ICompletionWidget widget, CodeCompletionContext ctx)
 		{
-			int cursor = editor.CursorPosition;
+			int cursor = widget.CurrentCodeCompletionContext.TriggerOffset;
 			int i = ctx.TriggerOffset;
 			if (i < 0 || i >= editor.TextLength || editor.GetCharAt (i) == ')')
 				return -1;
@@ -94,9 +94,9 @@ namespace CBinding
 			int parameterIndex = 1;
 			
 			while (i++ < cursor) {
-				if (i >= editor.TextLength)
+				if (i >= widget.TextLength)
 					break;
-				char ch = editor.GetCharAt (i);
+				char ch = widget.GetChar (i);
 				if (ch == ',')
 					parameterIndex++;
 				else if (ch == ')')
