@@ -1,3 +1,7 @@
+2010-07-15  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/DataProvider.cs: Track API changes.
+
 2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* CBinding.addin.xml:
